[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "pyostrap"
version = "0.0.1"
authors = [
    { name="Nicholas Vanhaute", email="nvanhaute@wisc.edu" },
]
description = "A Python wrapper for the Biostrap REST API"
readme = "README.md"
requires-python = ">=3.12"
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
]

[project.urls]
Homepage = "https://github.com/uwmadison-chm/pyostrap"
Issues = "https://github.com/uwmadison-chm/pyostrap/issues"