[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "pyostrap"
version = "2024.11.12.2"
authors = [
    { name="Nicholas Vanhaute", email="nvanhaute@wisc.edu" },
]
description = "A Python wrapper for the Biostrap REST API"
readme = "README.md"
requires-python = ">=3.8"
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
]
dependencies = [
    "certifi>=2024.6.2",
    "charset-normalizer>=3.3.2",
    "idna>=3.7",
    "requests>=2.32.3",
    "urllib3>=2.2.2",
]

[project.urls]
Homepage = "https://github.com/uwmadison-chm/pyostrap"
Issues = "https://github.com/uwmadison-chm/pyostrap/issues"
