[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "pyostrap"
version = "2025.04.11.0"
authors = [
    { name="Nicholas Vanhaute", email="nvanhaute@wisc.edu" },
    { name="Stuti Shrivastava", email="sshrivastav6@wisc.edu" },
]
maintainers = [
    { name="Stuti Shrivastava", email="sshrivastav6@wisc.edu" },
    { name="Nate Vack", email="njvack@wisc.edu" },
]
description = "A Python wrapper for the Biostrap REST API"
readme = "README.md"
requires-python = ">=3.8"
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
]
dependencies = [
    "anyio>=4.9.0",
    "certifi>=2025.1.31",
    "h11>=0.14.0",
    "h2>=4.2.0",
    "hpack>=4.1.0",
    "httpcore>=1.0.7",
    "httpx>=0.28.1",
    "hyperframe>=6.1.0",
    "idna>=3.10",
    "sniffio>=1.3.1",
    "typing_extensions>=4.13.2",
]

[project.urls]
Homepage = "https://github.com/uwmadison-chm/pyostrap"
Issues = "https://github.com/uwmadison-chm/pyostrap/issues"
